# RemoteBackup

./: .gitignore  README.md
Client/: CMakeLists.txt  main.cpp
Client/hashManager/: hashManager.cpp  hashManager.h
ProgAggiornato/client/: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  jsonUtils.cpp  jsonUtils.h  main.cpp
ProgAggiornato/client/cartella_da_osservare/dir1/: Information systems security.odt
ProgAggiornato/client/fileWatcher/: FileWatcher.cpp  FileWatcher.h
ProgAggiornato/client/hashManager/: hashManager.cpp  hashManager.h
ProgAggiornato/socket/: CMakeLists.txt  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  main.cpp
ProgAggiornato/socket/serverUtils/: folders.txt  serverUtils.cpp  serverUtils.h
Server/: CMakeLists.txt  main.cpp
Server/hashManager/: hashManager.cpp  hashManager.h
Server/mainUtil/: mainUtilities.cpp  mainUtilities.h  users.txt
Server/main_util/: mainUtilities.cpp  mainUtilities.h
Server/socketUtil/: Socket.cpp  Socket.h
Test/filewatcher_tests/file_watcher/: FileWatcher.cpp  FileWatcher.h
Test/sha1_tests/sha1/: CMakeLists.txt  main.cpp
Test/socket/: Socket.h  main.cpp
Test/socket/client/: CMakeLists.txt
client/: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  main.cpp
filewatcher_tests/: README.md
filewatcher_tests/file_watcher/: CMakeLists.txt  FileWatcher.cpp  FileWatcher.h  main.cpp
sha1_tests/sha1/: CMakeLists.txt  main.cpp
socket/: CMakeLists.txt  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  main.cpp
socket/client/: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  main.cpp
